Fix last channel being cropped

--- a/src/pages/chat/components/MessagingChannelList/MessagingChannelList.css
+++ b/src/pages/chat/components/MessagingChannelList/MessagingChannelList.css
@@ -1,7 +1,7 @@
 .messaging__channel-list {
   padding: 10px 10px 10px 10px;
   width: 330px;
-  height:100%;
+  height: 100%;
   overflow-y: auto;
 }
 
@@ -158,4 +158,7 @@
   100% {
     background-position: 400px 0;
   }
+}
+#empty-block {
+  height: 50px;
 }
